crates/alder-parse/src/expression/snapshots/alder_parse__expression__lambda__tests__lambda_typed_params.snap
---
source: crates/alder-parse/src/expression/lambda.rs
description: "(a: Number, b: String) -> a"
---
Located {
    region: Region {
        start: Position {
            line: 1,
            column: 1,
        },
        end: Position {
            line: 1,
            column: 28,
        },
    },
    value: Lambda(
        Lambda {
            params: [
                Param {
                    pattern: Located {
                        region: Region {
                            start: Position {
                                line: 1,
                                column: 2,
                            },
                            end: Position {
                                line: 1,
                                column: 3,
                            },
                        },
                        value: Var(
                            "a",
                        ),
                    },
                    annotation: Some(
                        Located {
                            region: Region {
                                start: Position {
                                    line: 1,
                                    column: 5,
                                },
                                end: Position {
                                    line: 1,
                                    column: 11,
                                },
                            },
                            value: Named {
                                path: Path {
                                    segments: [
                                        Located {
                                            region: Region {
                                                start: Position {
                                                    line: 1,
                                                    column: 5,
                                                },
                                                end: Position {
                                                    line: 1,
                                                    column: 11,
                                                },
                                            },
                                            value: "Number",
                                        },
                                    ],
                                },
                                args: [],
                            },
                        },
                    ),
                },
                Param {
                    pattern: Located {
                        region: Region {
                            start: Position {
                                line: 1,
                                column: 13,
                            },
                            end: Position {
                                line: 1,
                                column: 14,
                            },
                        },
                        value: Var(
                            "b",
                        ),
                    },
                    annotation: Some(
                        Located {
                            region: Region {
                                start: Position {
                                    line: 1,
                                    column: 16,
                                },
                                end: Position {
                                    line: 1,
                                    column: 22,
                                },
                            },
                            value: Named {
                                path: Path {
                                    segments: [
                                        Located {
                                            region: Region {
                                                start: Position {
                                                    line: 1,
                                                    column: 16,
                                                },
                                                end: Position {
                                                    line: 1,
                                                    column: 22,
                                                },
                                            },
                                            value: "String",
                                        },
                                    ],
                                },
                                args: [],
                            },
                        },
                    ),
                },
            ],
            ret: None,
            body: Located {
                region: Region {
                    start: Position {
                        line: 1,
                        column: 27,
                    },
                    end: Position {
                        line: 1,
                        column: 28,
                    },
                },
                value: Var(
                    "a",
                ),
            },
        },
    ),
}
